k8s-yaml/ServiceMesh/Backend.yaml



---
apiVersion: v1
kind: Pod
metadata:
  name: backend-v1
  namespace: demo
  labels:
    app: backend
    version: v1
spec:
  containers:
  - name: backend
    image: hashicorp/http-echo
    args:
      - "-text=Hello from backend v1"
      - "-listen=:5678"

---
apiVersion: v1
kind: Pod
metadata:
  name: backend-v2
  namespace: demo
  labels:
    app: backend
    version: v2
spec:
  containers:
  - name: backend
    image: hashicorp/http-echo
    args:
      - "-text=Hello from backend v2"
      - "-listen=:5678"

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demo
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5678
